# mysql2pg

./: .env.example  COPYRIGHT.md  Cargo.toml  Dockerfile  PROMPTS.md  README.md  compatibility-suite.sql  create-query.sql  docker-compose.matomo-tests.yml  docker-compose.yml  tmp_matomo_prepare_flow.php  tmp_matomo_stmt_repro.php  tmp_stmt_param_count.php
config/: example.toml
docs/: compatibility.md  mariadb-test-suite.md  matomo.md
matomo-tests/: Dockerfile  entrypoint.sh
mysql-test/suite/mysql2pg/r/: json_functions.result  metadata.result  text_smoke.result
mysql-test/suite/mysql2pg/t/: json_functions.test  metadata.test  text_smoke.test
scripts/: matomo-installer-repro.php  matomo-prepared-show-debug.php  matomo-show-charset-param-repro.php  matomo-show-tables-repro.php  run-mariadb-suite.sh  run-matomo-db-tests.sh  set-matomo-admin-login.php  setup-matomo-tests.sh  tmp_charset_then_show_variables.php  tmp_installer_prepare_sequence.php  tmp_show_tables_app_repro.php  tmp_stats_show_variables_sequence.php  tmp_three_step_prepare_repro.php  tmp_two_step_prepare_repro.php  tmp_zend_mysqli_show_charset.php  update-matomo-test-config.php
src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  mysql_server.rs  parser.rs  server.rs  translator.rs
tests/: translation_smoke.rs
