[package]
name = "mysql2pg-middleware"
version = "0.3.2"
edition = "2021"
description = "A Rust middleware that parses MySQL SQL, translates it to PostgreSQL SQL, and can expose a MySQL-compatible server front end."
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.8", features = ["json", "tokio", "http1"] }
bytes = "1"
clap = { version = "4.6", features = ["derive"] }
dotenvy = "0.15.7"
opensrv-mysql = "0.7.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.61"
thiserror = "2"
tokio = { version = "1.50", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["runtime", "with-serde_json-1"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1"

[patch.crates-io]
opensrv-mysql = { path = "vendor/opensrv-mysql" }
